--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,4 @@ w7x_from_gx_repository_LMN4.h5
 w7x_from_gx_repository_LMN6.h5
 wout_w7x_from_gx_repository_lowRes.nc
 desc_w7x_from_gx_repository_lowRes*
+axisymm.h5
