--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
         python -m pip install --upgrade pip
         pip --version
 
+    - name: Install specific version of desc
+      run: |
+        pip install git+https://github.com/PlasmaControl/DESC.git@b10f8c8be9d3e751684e5d34abecaf5cd40b2205
+
     - name: Install python dependencies
       run: |
         pip install -r requirements.txt
