tidy up netcdf writing

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,5 @@ w7x_from_gx_repository_LMN6.h5
 wout_w7x_from_gx_repository_lowRes.nc
 desc_w7x_from_gx_repository_lowRes*
 axisymm.h5
+eik.nc
+.DS_Store
